# LLM

./: .gitignore  ReACT_with_prompt.ipynb  ReAct_MySQL.py  cahtbot.py  chatbot.py  embedding_recipes.py  helper.ipynb  langraph.py  load_df_pinecone.py  local.db  private_agent.py  pyproject.toml  requirements.txt  streamlit_core.py  table_generator.py  tool.py
examples/: current_date.py  magic_function.py  solar_panels.py  weather.py
faiss_index_recipes_openai/: index.pkl
modules/: dbUtils.py  graphUtils.py  pineconeUtils.py  utils.py
rag/: rag_on_pinecone.py  rag_on_vectordb.py
test/: creationvdb.py  rag_on_vectordb.py  test_add.py
vectorialdb/: storedb.py
