[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Omar Amer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langgraph = "^0.2.53"
langchain-core = "^0.3.21"
langchain-community = "^0.3.8"
langchain-anthropic = "^0.3.0"
llama-index = "^0.12.1"
llama-index-llms-ollama = "^0.4.1"
googlemaps = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
